syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.snowflakeid";

message GenerateIdRequest {
  string requestId = 1;
}

message GenerateIdResponse {
  string requestId = 1;
  int64 id = 2;
}